--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,10 +13,12 @@ blockquote {
 	margin: 1rem 0 !important;
 }
 a:not([class^='ivu-'])[target='_blank']::after {
-	content: '\F3F2';
-	font-family: Ionicons;
+	content: '\f35d';
+	font-family: 'Font Awesome 5 Free';
+	font-weight: 900;
 	color: #aaa;
-	margin-left: 3px;
+	margin-left: 5px;
+	vertical-align: 3px;
 }
 code, kbd, pre, samp {
 	font-family: 'Fira Mono', monospace !important;
