:children_crossing: Improve router scroll

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,3 +36,19 @@ code.plain {
 .hljs {
 	tab-size: 4;
 }
+
+// Router transition
+.fade {
+	&-enter-to,
+	&-leave {
+		opacity: 1;
+	}
+	&-enter,
+	&-leave-to {
+		opacity: 0;
+	}
+	&-enter-active,
+	&-leave-active {
+		transition: opacity 0.2s ease;
+	}
+}
