:memo: Add browser example

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,6 +24,9 @@ code.plain {
 		&:first-child {
 			margin-top: 1rem;
 		}
+		.icon {
+			margin-right: 0.5rem;
+		}
 		.tag {
 			margin-left: 0.5rem;
 
